@@ -1,3 +1,10 @@
+Wed Jun 13 11:31:27 2001  Ossama Othman  <ossama@uci.edu>
+
+	* ace/Makefile.am:
+
+	  Synchronized the source lists with those in the stock ACE
+	  Makefile.
+
 Wed Jun 13 14:18:22 2001  Steve Huston  <shuston@riverace.com>
 
         * ACE-INSTALL.html: Modified the platforms/compilers section to
